feat: enhance authentication and caching mechanisms
- Introduced runtime bootstrap for managing concurrency and thread pools.
- Improved authentication preprocessor to cache entity IDs, event cache, and route context.
- Added graceful shutdown for authentication workers and ensured cache registration for ban console.
- Refactored cache configuration to use constants instead of dynamic config retrieval.
- Enhanced ban management with upsert functionality and cache synchronization.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ priority = "primary"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-playwright = "^1.41.1"
+playwright = "1.57.0"
 nonebot-adapter-onebot = ">=2.3.1"
 nonebot-plugin-apscheduler = "^0.5"
 tortoise-orm = "^0.20.0"
